/*
 * This file was generated by the Gradle 'init' task.
 *
 * This is a general purpose Gradle build.
 * To learn more about Gradle by exploring our Samples at https://docs.gradle.org/8.7/samples
 */

//TODO: causes a root source, which we don't want
plugins {
    id("java")
}

subprojects {
    apply(plugin = "java")

    group = "gg.mew.slabby"
    version = "unspecified"

    repositories {
        mavenCentral()
        maven("https://jitpack.io")
        maven("https://repo.aikar.co/content/groups/aikar/")
    }

    dependencies {
        compileOnly("org.projectlombok:lombok:1.18.32")
        annotationProcessor("org.projectlombok:lombok:1.18.32")

        testCompileOnly("org.projectlombok:lombok:1.18.32")
        testAnnotationProcessor("org.projectlombok:lombok:1.18.32")
    }

    java {
        toolchain.languageVersion.set(JavaLanguageVersion.of(21))
    }
}